fix: remove unused background image setting from build config

--- a/package.json
+++ b/package.json
@@ -39,13 +39,7 @@
       "darkModeSupport": true
     },
     "dmg": {
-      "background": "build/background.png",
-      "icon": "build/icon.icns",
-      "iconSize": 100,
-      "window": {
-        "width": 540,
-        "height": 380
-      }
+      "background": null
     },
     "win": {
       "target": ["nsis", "portable"],
