chore update app icon for better visibility in dark mode

--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "electron .",
     "dev": "electron . --dev",
     "build": "electron-builder",
-    "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win",
-    "build:linux": "electron-builder --linux"
+    "build:mac": "electron-builder --mac"
   },
   "author": "Naoto",
   "license": "MIT",
@@ -29,26 +27,16 @@
     },
     "files": [
       "src/**/*",
-      "node_modules/**/*",
       "package.json"
     ],
     "mac": {
       "category": "public.app-category.graphics-design",
-      "icon": "build/icon.icns",
+      "icon": "assets/icons/icon.icns",
       "target": ["dmg", "zip"],
       "darkModeSupport": true
     },
     "dmg": {
       "background": null
-    },
-    "win": {
-      "target": ["nsis", "portable"],
-      "icon": "build/icon.ico"
-    },
-    "linux": {
-      "target": ["AppImage", "deb"],
-      "category": "Graphics"
-    },
-    "publish": null
+    }
   }
 }
